# minecraft-butler-ai

./: .example.env  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: backend-developer.md  frontend-developer.md  product-strategy-analyst.md
.claude/rules/: openspec-tasks-mandatory-steps.md
.claude/skills/enrich-us/: SKILL.md
.claude/skills/write-pr-report/: SKILL.md
alembic/: env.py
alembic/versions/: 0001_initial.py  4eac525eeeed_add_user_lockout_fields.py
app/: main.py
app/core/: database.py  lifespan.py  migrations.py  settings.py
app/features/auth/: dependencies.py  repository.py  router.py  schemas.py  security.py  seed.py  service.py
app/features/butler/: router.py  schemas.py  service.py
app/features/health/: router.py
app/features/roles/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/features/users/: models.py  repository.py  router.py  schemas.py  service.py
docs/: SDD steps.md  backend-standards.md  base-standards.md  data-model.md  development_guide.md  documentation-standards.md  roadmap.md  verification-guide.md
openspec/: config.yaml
openspec/changes/conversation-memory/: tasks.md
openspec/changes/derive-session-id-from-user/: design.md  proposal.md  tasks.md
openspec/changes/fix-langsmith-streaming-traces/: design.md  proposal.md  tasks.md
openspec/changes/fix-rag-multilingual-retrieval/: design.md  proposal.md  tasks.md
openspec/changes/harden-butler-pipeline/: tasks.md
openspec/changes/init-butler-graph/: design.md  tasks.md
openspec/changes/rag-core/: design.md
scripts/: diag_rag.py  ingest.py
tests/: test_api.py  test_lifespan_preload.py
(+116 files in other folders)
