[project]
name = "fastapi-template"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "pydantic-settings",
    "pyjwt",
    "pwdlib[argon2]",
    "python-multipart",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]

[tool.uv]
package = false
