[project]
name = "minecraftbutlerai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "pydantic-settings",
    "pyjwt",
    "pwdlib[argon2]",
    "python-multipart",
    "slowapi",
    "email-validator",
    "langgraph>=1.2.2",
    "langchain-anthropic>=1.4.4",
    "langchain-core>=1.4.0",
    "langsmith>=0.8.7",
    "truststore>=0.10.4",
    "langchain-openai>=1.2.2",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.5.1",
    "qdrant-client[fastembed]>=1.9.0",
    "flashrank>=0.2.9",
    "langchain-qdrant>=0.2.0",
    "langgraph-checkpoint-redis>=0.4.1",
    "faster-whisper>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "pytest-asyncio>=1.4.0",
]

[tool.uv]
package = false
